style.css
/* ... */
.account-card__title .display-name bdi {
  color: var(--color-white);
  display: block;
  font-weight: 700;
}

/* Forms */
.input.boolean .label_input {
  padding-left: 28px;
}

.input.with_label .label_input > label {
  color: var(--color-white);
  display: block;
  font-family: inherit;
  font-size: 14px;
  font-weight: 500;
  margin-bottom: 8px;
  word-wrap: break-word;
}

.input.boolean .label_input__wrapper {
  position: static;
}

.input {
  position: relative;
}

.input .label_input {
  margin-bottom: 16px;
  margin-top: 16px;
}

.has-access-token:not(.has-user-filtering-disabled) #instructions + h2 {
  margin-bottom: 0;
}

/* stylelint-disable-next-line */
.has-user-filtering-disabled #filter-followed-container {
  display: none;
}

#filter-followed-container.input.boolean .label_input {
  margin-top: 0;
}

.input.boolean label.checkbox {
  left: 0;
  position: absolute;
  top: 2px;
}

.label_input > label {
  color: var(--color-white);
  display: block;
  font-family: inherit;
  font-size: 14px;
  font-weight: 500;
  margin-bottom: 8px;
  word-wrap: break-word;
}

input[type="search"],
input[type="text"],
input[type="url"],
textarea {
  background-color: var(--color-chinese-black);
  border: 1px solid var(--color-vampire-black);
  border-radius: 4px;
  box-sizing: border-box;
  color: var(--color-white);
  display: block;
  font-family: inherit;
  font-size: 16px;
  outline: 0;
  padding: 10px;
  resize: vertical;
  width: 100%;
}

.heading input[type="search"] {
  align-self: center;
  background-color: rgb(0 0 0 / .1);
  border-color: rgb(0 0 0 / .1);
  color: var(--color-white);
  display: inline-flex;
  font-size: 14px;
  max-width: 140px;
  padding: 5px 7px 5px 10px;
  width: auto;
}

.heading input[type="search"]::placeholder {
  color: rgba(255 255 255 / .5);
}

input[type="search"]::-webkit-search-cancel-button {
  /* stylelint-disable-next-line */
  -webkit-appearance: none;
  background-image: url('data:image/svg+xml, %3Csvg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 512 512" class="s-ion-icon"%3E%3Cpath fill="%23fff" d="M256 48C141.1 48 48 141.1 48 256s93.1 208 208 208 208-93.1 208-208S370.9 48 256 48zm52.7 283.3L256 278.6l-52.7 52.7c-6.2 6.2-16.4 6.2-22.6 0-3.1-3.1-4.7-7.2-4.7-11.3 0-4.1 1.6-8.2 4.7-11.3l52.7-52.7-52.7-52.7c-3.1-3.1-4.7-7.2-4.7-11.3 0-4.1 1.6-8.2 4.7-11.3 6.2-6.2 16.4-6.2 22.6 0l52.7 52.7 52.7-52.7c6.2-6.2 16.4-6.2 22.6 0 6.2 6.2 6.2 16.4 0 22.6L278.6 256l52.7 52.7c6.2 6.2 6.2 16.4 0 22.6-6.2 6.3-16.4 6.3-22.6 0z"%3E%3C/path%3E%3C/svg%3E%0A');
  background-position: center;
  background-repeat: no-repeat;
  background-size: 16px 16px;
  height: 16px;
  width: 16px;
}

.label_input__wrapper {
  display: flex;
}

.label_input {
  margin-bottom: 27px;
  margin-top: 27px;
}

/* Skeleton */
.skeleton {
  margin-bottom: 16px;
}

.skeleton .status__avatar {
  background-color: var(--color-dark-electric-blue);
  border-radius: 4px;
  display: block;
  height: 46px;
  overflow: hidden;
  position: relative;
  width: 46px;
}

.checking-user .button-action::before,
.skeleton .add-skeleton::before {
  animation-duration: 1s;
  animation-iteration-count: infinite;
  animation-name: gradient-animation;
  background-image: linear-gradient(to right, #606984 25%, #7f8bae 50%, #606984 100%);
  content: '';
  filter: blur(5px);
  height: 100%;
  left: 0%;
  position: absolute;
  top: 0;
  width: 50px;
}

.skeleton li {
  align-items: center;
  display: flex;
  justify-content: space-between;
}

.checking-user .button-action,
.skeleton .add-skeleton {
  background-color: #606984;
  color: transparent;
  overflow: hidden;
  position: relative;
}

.skeleton strong {
  display: inline-flex;
  height: 20px;
  margin-bottom: 5px;
}

.skeleton .display-name {
  display: inline-block;
}

/* stylelint-disable-next-line */
.user-list[aria-busy="true"] {
  /* stylelint-disable-next-line */
  display: none !important;
}

@keyframes gradient-animation {
  from {
    left: 0%;
  }

  to {
    left: 100%;
  }
}

@media (min-width: 601px) {
  input[type="url"].auth-input {
    border-bottom-right-radius: 0;
    border-top-right-radius: 0;
    width: 74%;
  }

  .button#button-auth {
    border-bottom-left-radius: 0;
    border-top-left-radius: 0;
    width: 26%;
  }
}

@media (max-width: 600px) {
  .label_input__wrapper {
    display: block;
  }

  .button#button-auth {
    height: 43px;
    width: 100%;
  }

  body,
  .display-name,
  .display-name__account,
  .status__display-name * {
    font-size: 14px;
  }

  h1 {
    align-items: flex-start;
    font-size: 18px;
  }

  h2 {
    font-size: 17px;
  }

  h1 svg {
    transform: translateY(2px);
  }

  button[aria-controls="instructions"] {
    align-items: flex-start;
  }

  button[aria-controls="instructions"] svg {
    transform: translateY(2px);
  }

  .display-name__account,
  .status__display-name {
    width: 60vw;
  }

  footer {
    margin-bottom: 20px;
  }
}

.disabled {
  pointer-events: none;
  position: relative;
}

.disabled > * {
  opacity: .2;
}

.disabled::after {
  content: 'Toimintoa parannellaan parhaillaan...';
  display: block;
  font-size: 16px;
  font-weight: 500;
  position: absolute;
  text-align: center;
  top: 50%;
  transform: translateY(-50%);
  width: 100%;
}

@media (max-width: 477px) {
  .user-list .collapsed .button-action {
    pointer-events: none;
    visibility: hidden;
  }
}

@media (max-width: 460px) {
  /* stylelint-disable */
  .account-card__counters {
    display: none;
  }

  .account-card__actions {
    display: grid;
    grid-auto-columns: minmax(0, 1fr);
    margin-bottom: 10px;
    margin-top: 16px;
    position: relative;
    z-index: 999;
  }
}

@media (max-width: 430px) {
  .account-card {
    max-width: calc(100vw - calc(calc(16px * 2) + 16px));
  }
}

